--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docker:export": "docker-compose run --rm build npm run export"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-agentcore": "^3.0.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
