--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,8 @@
 # AWS Configuration
 NEXT_PUBLIC_AWS_REGION=us-east-1
-NEXT_PUBLIC_AWS_ACCESS_KEY_ID=your_access_key_here
-NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY=your_secret_key_here
 NEXT_PUBLIC_BEDROCK_AGENT_ARN=arn:aws:bedrock-agentcore:us-east-1:YOUR_ACCOUNT_ID:runtime/YOUR_AGENT_RUNTIME_NAME
+
+# Cognito Configuration
+NEXT_PUBLIC_COGNITO_USER_POOL_ID=your_user_pool_id_here
+NEXT_PUBLIC_COGNITO_USER_POOL_CLIENT_ID=your_user_pool_client_id_here
+NEXT_PUBLIC_COGNITO_IDENTITY_POOL_ID=your_identity_pool_id_here
