--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-agentcore": "^3.0.0",
+    "@aws-sdk/credential-providers": "^3.0.0",
+    "amazon-cognito-identity-js": "^6.0.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
