CognitoとBedrockのリージョン変数を修正

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,7 @@
 # AWS Configuration
-NEXT_PUBLIC_AWS_REGION=us-east-1
-NEXT_PUBLIC_BEDROCK_AGENT_ARN=arn:aws:bedrock-agentcore:us-east-1:YOUR_ACCOUNT_ID:runtime/YOUR_AGENT_RUNTIME_NAME
+NEXT_PUBLIC_AWS_REGION=ap-northeast-1
+NEXT_PUBLIC_BEDROCK_AGENT_ARN=arn:aws:bedrock-agentcore:us-west-2:YOUR_ACCOUNT_ID:runtime/YOUR_AGENT_RUNTIME_NAME
+NEXT_PUBLIC_AWS_BEDROCK_REGION=us-west-2
 
 # Cognito Configuration
 NEXT_PUBLIC_COGNITO_USER_POOL_ID=your_user_pool_id_here
