feat: Implement AWS Cognito authentication and Bedrock Agent integration
- Add AWS Cognito login with user authentication flow
- Replace mock login with real Cognito user pool integration
- Add user avatar with initials and logout dropdown menu
- Integrate AWS Bedrock Agent Runtime for AI conversations
- Connect Communication and Counseling Mentors to deployed AI agent
- Add keyboard shortcuts (Enter to send, Shift+Enter for new line)
- Add typing indicator animation during AI response waiting
- Fix dropdown menu backgrounds to white for better visibility
- Add missing AWS SDK dependencies for Bedrock Agent Runtime
- Implement proper error handling and loading states

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docker:export": "docker-compose run --rm build npm run export"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.0.0",
     "@aws-sdk/client-bedrock-agentcore": "^3.0.0",
     "@aws-sdk/credential-providers": "^3.0.0",
     "@radix-ui/react-accordion": "^1.2.0",
