--- a/package.json
+++ b/package.json
@@ -63,12 +63,15 @@
     "next-themes": "^0.3.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.0",
-    "tailwindcss-animate": "^1.0.0"
+    "tailwindcss-animate": "^1.0.0",
+    "react-markdown": "^9.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
