--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build",
+    "export": "next export",
     "docker:dev": "docker-compose up --build",
 
     "docker:export": "docker-compose run --rm build npm run export"
