--- a/amplify.yml
+++ b/amplify.yml
@@ -7,10 +7,14 @@ frontend:
     build:
       commands:
         - npm run build
+        - ls -la
+        - if [ -d "out" ]; then echo "out directory exists"; else echo "out directory not found, checking .next"; ls -la .next/; fi
   artifacts:
-    baseDirectory: out
+    baseDirectory: .
     files:
-      - '**/*'
+      - 'out/**/*'
+      - '.next/**/*'
+      - '!.next/cache/**/*'
   cache:
     paths:
       - node_modules/**/*
