--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,7 @@ frontend:
     build:
       commands:
         - npm run build
+        - echo '{"version":1,"files":[],"ignore":[]}' > out/required-server-files.json
   artifacts:
     baseDirectory: out
     files:
@@ -14,3 +15,4 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
+platform: WEB
